rtsp-media: ERROR:../gst/rtsp-server/rtsp-media.c:2990:gst_rtsp_media_get_rates: assertion failed: (FALSE)
Describe your issue
When starting gst-rtsp-server/builddir/examples/test-readme (where builddir is my build folder) and sending the following hexstream requests to the server in sequence, the following error occurs:
Bail out! GStreamer-RTSP-Server:ERROR:../gst/rtsp-server/rtsp-media.c:2990:gst_rtsp_media_get_rates: assertion failed: (FALSE)
Expected Behavior
All requests should be processed and responded to successfully without assertion failure errors.
Observed Behavior
The server encounters an assertion failure when processing specific requests.
Setup
- Operating System: Ubuntu 20.04
- Device: Computer
- GStreamer Version: 1.25.0
-
Command line:
gst-rtsp-server/builddir/examples/test-readme
Steps to reproduce the bug
- open terminal
- type
commandgst-rtsp-server/builddir/examples/test-readme
- send the following hexstream requests to the server:
hexstream:
444553435249424520727473703a2f2f3132372e302e302e313a3535322f7465737420525453502f312e300d0a435365713a20320d0a557365722d4167656e743a202f726f6f742f4750462f70726f6a656374732d6173616e2f6c6976653535352f7465737450726f67732f7465737452545350436c69656e7420284c4956453535352053747265616d696e67204d656469612076323032332e30362e3134290d0a4163636570743a206170706c69636174696f6e2f7364700d0a0d0a
hexstream:
534554555020727473703a2f2f3132372e302e302e313a3535322f746573742f73747265616d3d3020525453502f312e300d0a435365713a20330d0a557365722d4167656e743a202f726f6f742f4750462f70726f6a656374732d6173616e2f6c6976653535352f7465737450726f67732f7465737452545350436c69656e7420284c4956453535352053747265616d696e67204d656469612076323032332e30362e3134290d0a5472616e73706f72743a205254502f4156503b756e69636173743b636c69656e745f706f72743d35313833362d35313833370d0a0d0a
hexstream:
504c415920727473703a2f2f3132372e302e302e313a3535322f746573742f20525453502f312e300d0a435365713a20340d0a557365722d4167656e743a202f726f6f742f4750462f70726f6a656374732d6173616e2f6c6976653535352f7465737450726f67732f7465737452545350436c69656e7420284c4956453535352053747265616d696e67204d656469612076323032332e30362e3134290d0a53657373696f6e3a20596e44624a324f6d706e695f56437a330d0a52616e67653a206e70743d302e3030302d0d0a0d0a
hexstream:
504c415920727473703a2f2f3132372e302e302e313a3535322f746573742f20525453502f312e300d0a435365713a20340d0a557365722d4167656e743a202f726f6f742f4750462f70726f6a656374732d6173616e2f6c6976653535352f7465737450726f67732f7465737452545350436c69656e7420284c4956453535352053747265616d696e67204d656469612076323032332e30362e3134290d0a53657373696f6e3a20596e44624a324f6d706e695f56437a330d0a52616e67653a206e70743d302e3030302d0d0a0d0a
How reproducible is the bug?
The reproducibility of the bug is Intermittent after doing a very specific set of steps
Screenshots if relevant
N/A
Solutions you have tried
N/A
Related non-duplicate issues
None.
Additional Information
STDOUT: stream ready at rtsp://127.0.0.1:8554/test GStreamer-RTSP-Server:ERROR:../gst/rtsp-server/rtsp-media.c:2990:gst_rtsp_media_get_rates: assertion failed: (FALSE)